bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type Bool
var etat : Bool = false 
           ^